analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/ActualConstructorAllDefaultsNoArgOverload.java
public final class Bar /* common.pack.Bar*/ {
  public  Bar();//  .ctor()

  public  Bar(int, int);//  .ctor(int, int)
}
